added bainbridge et al data, processing, analyses

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ old/*
 data/processed/data_drop_decisions.rds
 data/intermediary/data_replications.rds
 .Rproj.user
+data/processed/bainbridge et al/data_drop_decisions.rds
+data/processed/bainbridge et al/data_replications.rds
+data/raw/bainbridge et al/output.zip
